--- a/ptCamila-versão final/assets/scss/style.scss
+++ b/ptCamila-versão final/assets/scss/style.scss
@@ -72,7 +72,7 @@ $tamMargin: 2rem;
     padding-left: 5rem;
     label{
         font-weight: bold;
-        color:black;
+        color:white;
     }
     h2{
         padding-top:4rem;
