--- a/ptCamila-versão final/assets/scss/style.scss
+++ b/ptCamila-versão final/assets/scss/style.scss
@@ -50,6 +50,7 @@ $tamMargin: 2rem;
     height: 780px;
     background-repeat: no-repeat;
     padding: $tamPadding;
+    color: white;
     img{
         margin-top: $tamMargin;
         height: 500px;
