--- a/ptCamila-versão final/assets/css/style.css
+++ b/ptCamila-versão final/assets/css/style.css
@@ -41,7 +41,8 @@
   background-size: 100% 100%;
   height: 780px;
   background-repeat: no-repeat;
-  padding: 2rem; }
+  padding: 2rem;
+  color: white; }
   #download img {
     margin-top: 2rem;
     height: 500px;
@@ -62,7 +63,7 @@
   padding-left: 5rem; }
   #cadastro label {
     font-weight: bold;
-    color: black; }
+    color: white; }
   #cadastro h2 {
     padding-top: 4rem;
     color: white;
